syntax = "proto3";

package blackbox;

option go_package = "shortener/proto/blackbox";

message IssueTokenReq {
  string user_id = 1;
}

message IssueTokenRsp {
  string token = 1;
}

message ValidateTokenReq {
  string token = 1;
}

message ValidateTokenRsp {
  oneof variant {
    string user_id = 1;
    string error = 2;
  }
}

service BlackboxService {
  rpc IssueToken(IssueTokenReq) returns (IssueTokenRsp);

  rpc ValidateToken(ValidateTokenReq) returns (ValidateTokenRsp);
}
